# OpenRacingHUD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  f1_2019_telemetry_reader.py  mainqml.cpp  plugin_selector_window.cpp  plugin_selector_window.hpp  python_runner.cpp  python_runner.hpp
docs/: mingw-qt-python.md
f1-overlay/: CMakeLists.txt  c_interface.cpp  c_interface.h  f1_overlay.py  helpers.h  main.cpp  wheelslipwindow.cpp  wheelslipwindow.hpp
f1_2019_telemetry/: CMakeLists.txt  asettosharedmemoryreader.cpp  asettosharedmemoryreader.h  c_interface.cpp  f1_2019_telemetry_reader.py  f1_data_receiver.cpp  f1_data_receiver.hpp  f1_overlay.py  main.cpp  mainqml.cpp  overlay.py  overlay_interface.cpp  plugin_selector_window.cpp  plugin_selector_window.hpp  pluginselectorwindow.cpp  pluginselectorwindow.hpp  python_runner.cpp  wheelslipwindow.cpp  wheelslipwindow.hpp
f1_2019_telemetry/docs/: F1_2019.md  r3e.h
f1_2019_telemetry/legacy/: f1_data_receiver.hpp  main.cpp  wheelslipwindow.cpp  wheelslipwindow.hpp
f1_2019_telemetry/qml/: qmldir-old
f1_2019_telemetry/qml/games/: f1_data_reader.qml  raceroom_data_reader.qml
f1_2019_telemetry/qml/lib/: DataReader.qml  Telemetry.qml
f1_2019_telemetry/qml/plugins/: wheelslip.qml
f1_2019_telemetry/scripts/: f1_2019_telemetry_reader.py  raceroom_telemetry_reader.py
legacy/: c_interface.h  f1_data_receiver.cpp  overlay_interface.cpp
overlay/: CMakeLists.txt  c_interface.cpp  f1_overlay.py  helpers.h  wheelslipwindow.cpp
qml/games/: assetto_data_reader.qml  f1_data_reader.qml  raceroom_data_reader.qml
qml/plugins/: wheelslip.qml
scripts/: assetto_corsa_telemetry_reader.py  f1_2019_telemetry_reader.py  raceroom_telemetry_reader.py
